ci: deploy to github pages.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,67 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
+    <meta name="theme-color" content="#65C3C8" />
+    <meta name="description" content="Iconify Icon Convert to RGB565" />
+    <title>Iconify Icon Convert to RGB565</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
+
+    <div id="static-content" class="m-8 text-pretty text-base-content">
+      <p class="mt-2">
+        The icon name comes from
+        <a
+          href="https://icon-sets.iconify.design/"
+          target="_blank"
+          class="text-primary underline"
+          >iconify</a
+        >. At this stage, please copy the icon name from iconify to use in this
+        project.
+      </p>
+      <p class="mt-2">
+        Right now it's probably just for my own use as a hobby, so I won't be
+        putting much effort into perfecting this project. If you like this
+        project, please give me a
+        <span class="relative top-1"
+          ><a
+            class="github-button text-primary"
+            href="https://github.com/IvanLi-CN/embedded-icon-tools-online"
+            data-color-scheme="no-preference: light; light: light; dark: dark;"
+            data-icon="octicon-star"
+            data-show-count="true"
+            aria-label="Star IvanLi-CN/embedded-icon-tools-online on GitHub"
+            >Star</a
+          ></span
+        >, and if you have any suggestions, please raise an
+        <span class="relative top-1">
+          <a
+            class="github-button"
+            href="https://github.com/IvanLi-CN/embedded-icon-tools-online/issues"
+            data-color-scheme="no-preference: light; light: light; dark: dark;"
+            data-icon="octicon-issue-opened"
+            data-show-count="true"
+            aria-label="Issue IvanLi-CN/embedded-icon-tools-online on GitHub"
+            >Issue</a
+          > </span
+        >.
+      </p>
+    </div>
+
+    <footer class="m-8 justify-center items-center">
+      <a
+        href="https://github.com/IvanLi-CN/embedded-icon-tools-online"
+        target="_blank"
+        class="flex justify-center items-center hover:text-primary"
+      >
+        View source on GitHub
+        <span class="icon-[mdi--github] h-8 w-8 mx-2"></span>
+      </a>
+    </footer>
+
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
